# INR4torch

./: .gitignore  LICENSE  README.md  default-kan.yml  default-parameters.yml  pyproject.toml  requirements.txt
example/: example_dataloader.py  example_model.py  example_pde_model.py  generate_data.py  multiple_run.py  single_run.py
example/Hydro/: example_dataloader.py  example_model.py  example_pde_model.py  hydro.yml  joint_estimation.py  single_run.py
example/MQG/: double_gyre.py
example/QG/: QG.yml  data_simulation.py  example_dataloader.py  example_pde_model.py  requirements.txt  single_run.py  utils.py
example/advection/: example_dataloader.py  example_model.py  example_pde_model.py  multiple_run.py  single_run.py  utils.py
joss_paper/: paper.tex  references.bib
pinns/: __init__.py  data_loader.py  density_estimation.py  diff_operators.py  kan_utils.py  model_utils.py  models.py  parser.py  pde_utils.py  training.py
pinns/configs/: default-kan.yml
tests/: test_pinns.py
