[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "INR4torch"
version = "0.1.0"
description = "Physics-Informed Neural Networks with Implicit Neural Representations in PyTorch"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Peter Naylor", email = "peter.jack.naylor@gmail.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=1.12",
    "numpy>=1.21",
    "tqdm>=4.60",
    "scipy>=1.7",
    "optuna>=3.0",
    "pyyaml>=6.0",
]
keywords = [
    "neural-networks", "physics-informed", "implicit-neural-representations",
    "pde", "siren", "pinns", "pytorch",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "flake8",
    "black",
    "mypy",
]
examples = [
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/PeterJackNaylor/INR4torch"
Documentation = "https://github.com/PeterJackNaylor/INR4torch#readme"
Repository = "https://github.com/PeterJackNaylor/INR4torch"
Issues = "https://github.com/PeterJackNaylor/INR4torch/issues"

[tool.setuptools.packages.find]
include = ["pinns*"]

[tool.setuptools.package-data]
pinns = ["configs/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py38"]
